# mycli

./: .gitignore  Cargo.toml  README.md  config.example.toml
bench/: README.md  bench.sh  bench.toml  bench_v2.toml  grade.sh  test_prompts.md
bench/results/: graded.md  summary.md
bench/results/RedSage-8B-8bit/: blueteam-sigma.md  blueteam-yara.md  code-fizzbuzz.md  code-prime.md  code-regex.md  data-csv.md  data-json.md  identity.md  instruction-follow.md  redteam-revshell.md  redteam-ssti.md
crates/cersei/: Cargo.toml
crates/cersei-agent/: Cargo.toml
crates/cersei-agent/src/: agent_tool.rs  auto_dream.rs  compact.rs  context_analyzer.rs  coordinator.rs  effort.rs  events.rs  lib.rs  reporters.rs  runner.rs  session_memory.rs  system_prompt.rs
crates/cersei-hooks/: Cargo.toml
crates/cersei-hooks/src/: lib.rs
crates/cersei-mcp/: Cargo.toml
crates/cersei-mcp/src/: jsonrpc.rs  lib.rs  transport.rs
crates/cersei-memory/: Cargo.toml
crates/cersei-memory/src/: claudemd.rs  graph.rs  graph_migrate.rs  lib.rs  manager.rs  memdir.rs  session_storage.rs
crates/cersei-provider/: Cargo.toml
crates/cersei-provider/src/: anthropic.rs  lib.rs  openai.rs  stream.rs
crates/cersei-tools/: Cargo.toml
crates/cersei-tools-derive/: Cargo.toml
crates/cersei-tools-derive/src/: lib.rs
crates/cersei-tools/src/: ask_user.rs  bash.rs  bash_classifier.rs  config_tool.rs  cron.rs  file_edit.rs  file_history.rs  file_read.rs  file_write.rs  git_utils.rs  glob_tool.rs  grep_tool.rs  lib.rs  notebook_edit.rs  permissions.rs  plan_mode.rs  powershell.rs  remote_trigger.rs  send_message.rs  skill_tool.rs  sleep.rs  synthetic_output.rs  tasks.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/cersei-tools/src/skills/: bundled.rs  discovery.rs  mod.rs
crates/cersei-types/: Cargo.toml
crates/cersei-types/src/: lib.rs
crates/cersei/src/: lib.rs
crates/mycli/: Cargo.toml
crates/mycli/src/: config.rs  main.rs  render.rs  repl.rs
synology_downloader/: docker-compose.yml  download_models.sh  to-download.txt
