[workspace]
resolver = "2"
members = [
    "crates/cersei",
    "crates/cersei-types",
    "crates/cersei-provider",
    "crates/cersei-tools",
    "crates/cersei-tools-derive",
    "crates/cersei-agent",
    "crates/cersei-memory",
    "crates/cersei-hooks",
    "crates/cersei-mcp",
    "crates/mycli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MyCLI Contributors"]
license = "MIT"
description = "Lightweight AI coding CLI"
repository = ""
homepage = ""
keywords = ["ai", "agent", "coding", "llm", "cli"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"], default-features = false }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
url = "2"

# Text processing
similar = "2"
unicode-width = "0.2"

# HTML processing
html2text = "0.12"

# Process execution
nix = { version = "0.29", features = ["process", "signal", "user"] }

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Workspace crates
cersei-types = { path = "crates/cersei-types" }
cersei-provider = { path = "crates/cersei-provider" }
cersei-tools = { path = "crates/cersei-tools" }
cersei-tools-derive = { path = "crates/cersei-tools-derive" }
cersei-agent = { path = "crates/cersei-agent" }
cersei-memory = { path = "crates/cersei-memory" }
cersei-hooks = { path = "crates/cersei-hooks" }
cersei-mcp = { path = "crates/cersei-mcp" }

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
