[package]
name = "cersei-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool trait, built-in tools, and permission system for the Cersei SDK"

[dependencies]
cersei-types = { workspace = true }
cersei-mcp = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
similar = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
html2text = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
